--- a/src/style.css
+++ b/src/style.css
@@ -7,31 +7,43 @@ html{
 h1{
     text-align: center;
     color: rgb(187, 182, 182);
-    margin-top: 5%;
+    margin-top: 2%;
 }
 
-.main{
+.main{    
     background-image: url(../src/metal.jpg);
-    margin-left: 31%;
-    margin-top: 10%;
-    font-size: 21px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-left: 27%;
+    margin-top: 5%;
+    font-size: 18px;
     border: 2px solid grey;
-    height: 225px;
+    height: 220px;
     width: 500px;
     text-align: center;
+    align-items: center;
     border-radius: 5%;
-    padding: 30px;
+    padding: 25px;
+}
+
+#texto{
+    height: 25px;
+    width: 310px;
+}
+#code{
+    height: 25px;
+    width: 125px;
 }
 
 .bottom{
     background-image: url(../src/metal.jpg);
-    margin-left: 31%;
+    background-size: cover;
+    font-size: 15px;
+    margin-left: 27%;
     border: 2px solid grey;
-    height: 90px;
-    width: 500px;
+    height: 85px;
+    width: 554px;
     text-align: left;
-    border-radius: 5%;
-    padding: 30px;
+    border-radius: 5px;
     word-wrap: break-word;
-
 }
